# You2midi

./: .gitignore  Makefile  README.md  config.example.toml  go.mod  go.sum  main.go  pyproject.toml
.github/workflows/: ci.yml  desktop-release.yml
api/: openapi.yaml
cmd/launcher/: install_probe_other.go  install_probe_windows.go  main.go  proc_attr_other.go  proc_attr_windows.go  ui_other.go  ui_windows.go
cmd/updater/: main.go
desktop/: app.go  go.mod  main.go  runtime_bootstrap.go  runtime_bootstrap_test.go  wails.json
docs/: cancel-progress-api.md  desktop-release.md  launcher-config.md  license-compliance.md  patch-update.md  python-runtime-manifest.md  support-diagnostics.md  third_party_license_inventory.json  windows-security-validation.md
docs/adr/: ADR-001-runtime-boundary.md  ADR-002-engine-selection.md
frontend/: package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.css
installer/: You2Midi.iss
internal/config/: config.go  config_test.go  probe.go
internal/domain/: engine.go  errors.go  job.go  storage.go
internal/metrics/: metrics.go
internal/runner/: fake.go  path_sanitize.go  path_sanitize_test.go  runner.go  runner_test.go  runner_unix.go  runner_windows.go
internal/service/: cancel.go  errors.go  files.go  job_run.go  (+6 more)
scripts/: build_installer.ps1  build_patch.ps1  bundle_support_logs.ps1  desktop_build.ps1  ensure_launcher_config.ps1  generate_artifact_manifest.ps1  perf_gate.ps1  set_python_runtime_manifest.ps1  smoke_post_install.ps1  verify_license_compliance.ps1  verify_windows_security.ps1
(+26 files in other folders)
